--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,57 @@ body{
   font-family: 'Manrope', sans-serif;
 }
 
+.swiper-pagination-bullet{
+  width: 12px !important;
+  height: 12px !important;
+  border: 1px solid #747373 !important;
+  opacity: 100% !important;
+  background: #ddd !important;
+}
+
+.swiper-pagination-bullet-active{
+  background-color: #05472A !important;
+  border: none !important;
+  
+}
+
+.swiper{
+  padding-bottom: 70px !important;
+ 
+  border-radius: 10px ;
+  
+}
+
+/*
+.swiper-slide{
+  background: #747373 ;
+  border-radius: 12px;
+  box-shadow: 0px 20px 70px rgba(0, 103, 255, 0.3) !important;
+ margin: 15px !important;
+ 
+ 
+}
+*/
+
+
+
+.swiper-slide.swiper-slide-next{
+  background: #05472A;
+  border-radius: 12px;
+  box-shadow: 0px 20px 70px rgba(0, 103, 255, 0.3) !important;
+  margin: 5px;
+}
+
+.swiper-slide.swiper-slide-next h4, .swiper-slide.swiper-slide-next p{
+  color: #fff;
+  
+}
+
+.swiper-pagination{
+  top: 90% !important;
+}
+
+
 .sticky__header{
   width: 100%;
   height: 80px;
