--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,7 +29,15 @@
     }
 
     .hero__section{
-        @apply bg-[url('./assets/images/green.jpg')] bg-no-repeat bg-center bg-cover
+        @apply bg-[url('./assets/images/green.jpg')] bg-no-repeat bg-center bg-cover;
+    }
+
+    .form__label{
+        @apply text-textColor font-semibold text-[16px] leading-7 mb-2;
+    }
+
+    .form__input{
+        @apply w-full px-4 py-3 border border-solid border-[#0066ff61] focus:outline-none focus:border-primaryColor text-[16px] leading-7 text-headingColor placeholder:text-textColor cursor-pointer rounded-md;
     }
 }
 
